added input and list

--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>My ToDo List</h1>
 
+<main class="wrap">
+    <header>  <h1>My ToDo List</h1></header>
+    <section class="wrap__container">
+        <label>
+            <input class="wrap__container_input" type="text" placeholder=" Insert here what to do">
+        </label>
+        <ul class="list">
+            <li>Drink 2 glasses of water</li>
+            <li>Make a breakfast </li>
+        </ul>
+    </section>
+</main>
 <script src="script.js"></script>
 </body>
 </html>
