added read function for reading from input by click added element to the list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>  <h1>My ToDo List</h1></header>
     <section class="wrap__container">
         <label>
-            <input class="wrap__container_input" type="text" placeholder=" Insert here what to do">
+            <input class="insert-input" type="text" placeholder=" Insert here what to do">
         </label>
         <ul class="list">
             <li>Drink 2 glasses of water</li>
